bindings/unity/Runtime/Native/xybrid.h

#define XYBRID_ROLE_USER 1
#define XYBRID_ROLE_ASSISTANT 2
typedef struct XybridModelHandle {
  void *_0;
} XybridModelHandle;
typedef struct XybridEnvelopeHandle {
  void *_0;
} XybridEnvelopeHandle;
typedef struct XybridContextHandle {
  void *_0;
} XybridContextHandle;
typedef struct XybridGenerationConfigHandle {
  void *_0;
} XybridGenerationConfigHandle;
typedef struct XybridResultHandle {
  void *_0;
} XybridResultHandle;
typedef void (*XybridStreamCallback)(const char *token,
                                     int64_t token_id,
                                     uint32_t index,
                                     const char *cumulative_text,
                                     const char *finish_reason,
                                     void *user_data);
const char *xybrid_last_error(void);
void xybrid_free_string(char *s);
 if (envelope == NULL) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
     return 1;
 }
 xybrid_envelope_free(envelope);
void xybrid_envelope_free(struct XybridEnvelopeHandle *handle);
struct XybridContextHandle *xybrid_context_new(void);
int32_t xybrid_context_set_system(struct XybridContextHandle *handle, const char *text);
int32_t xybrid_context_push(struct XybridContextHandle *handle,
                            struct XybridEnvelopeHandle *envelope);
void xybrid_context_free(struct XybridContextHandle *handle);
struct XybridEnvelopeHandle *xybrid_envelope_text_with_role(const char *text, int32_t role);
struct XybridResultHandle *xybrid_model_run_with_context(struct XybridModelHandle *model,
                                                         struct XybridEnvelopeHandle *envelope,
                                                         struct XybridContextHandle *context,
                                                         struct XybridGenerationConfigHandle *config);
char *xybrid_model_id(struct XybridModelHandle *model);
int32_t xybrid_model_supports_token_streaming(struct XybridModelHandle *model);
struct XybridResultHandle *xybrid_model_run_streaming(struct XybridModelHandle *model,
                                                      struct XybridEnvelopeHandle *envelope,
                                                      struct XybridGenerationConfigHandle *config,
                                                      XybridStreamCallback callback,
                                                      void *user_data);
struct XybridResultHandle *xybrid_model_run_streaming_with_context(struct XybridModelHandle *model,
                                                                   struct XybridEnvelopeHandle *envelope,
                                                                   struct XybridContextHandle *context,
                                                                   struct XybridGenerationConfigHandle *config,
                                                                   XybridStreamCallback callback,
                                                                   void *user_data);
void xybrid_model_free(struct XybridModelHandle *handle);
int32_t xybrid_result_success(struct XybridResultHandle *result);
const char *xybrid_result_error(struct XybridResultHandle *result);
const char *xybrid_result_text(struct XybridResultHandle *result);
void xybrid_result_free(struct XybridResultHandle *handle);