bindings/unity/Runtime/Native/NativeMethods.g.cs


        /// <summary>
        ///  Run inference on a model with conversation context.
        ///
        ///  This function executes inference using the loaded model with conversation
        ///  history. The context provides previous messages which are formatted into
        ///  the prompt using the model's chat template.
        ///
        ///  # Parameters
        ///
        ///  - `model`: A handle to the loaded model.
        ///  - `envelope`: A handle to the input envelope (current user message).
        ///  - `context`: A handle to the conversation context.
        ///
        ///  # Returns
        ///
        ///  A handle to the result, or null on failure.
        ///  The envelope and context are NOT consumed - they can be reused.
        ///
        ///  # Example (C)
        ///
        ///  ```c
        ///  XybridContextHandle* ctx = xybrid_context_new();
        ///  xybrid_context_set_system(ctx, "You are a helpful assistant.");
        ///
        ///  XybridEnvelopeHandle* user_msg = xybrid_envelope_text_with_role("Hello!", XYBRID_ROLE_USER);
        ///  xybrid_context_push(ctx, user_msg);
        ///
        ///  XybridResultHandle* result = xybrid_model_run_with_context(model, user_msg, ctx);
        ///  if (xybrid_result_success(result)) {
        ///      const char* response = xybrid_result_text(result);
        ///      printf("Assistant: %s\n", response);
        ///
        ///      // Add assistant response to context
        ///      XybridEnvelopeHandle* asst_msg = xybrid_envelope_text_with_role(response, XYBRID_ROLE_ASSISTANT);
        ///      xybrid_context_push(ctx, asst_msg);
        ///      xybrid_envelope_free(asst_msg);
        ///  }
        ///
        ///  xybrid_result_free(result);
        ///  xybrid_envelope_free(user_msg);
        ///  xybrid_context_free(ctx);
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "xybrid_model_run_with_context", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern XybridResultHandle* xybrid_model_run_with_context(XybridModelHandle* model, XybridEnvelopeHandle* envelope, XybridContextHandle* context);

        /// <summary>
        ///  Get the model ID of a loaded model.
        ///
        ///  Returns a pointer to a null-terminated string containing the model ID.
        ///  The caller is responsible for freeing the returned string using
        ///  `xybrid_free_string()`.
        ///
        ///  # Parameters
        ///
        ///  - `model`: A handle to the loaded model.
        ///
        ///  # Returns
        ///
        ///  A pointer to a null-terminated string containing the model ID,
        ///  or null on failure. The caller must free this string with `xybrid_free_string()`.
        ///
        ///  # Example (C)
        ///
        ///  ```c
        ///  char* model_id = xybrid_model_id(model);
        ///  if (model_id != NULL) {
        ///      printf("Model ID: %s\n", model_id);
        ///      xybrid_free_string(model_id);
        ///  }
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "xybrid_model_id", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* xybrid_model_id(XybridModelHandle* model);

        /// <summary>
        ///  Check if a model supports token-by-token streaming.
        ///
        ///  Returns 1 if the model supports true token-by-token streaming (LLM models
        ///  with GGUF format when LLM features are enabled), 0 otherwise.
        ///
        ///  Note: `xybrid_model_run_streaming()` works for all models, but only LLM
        ///  models get true token-by-token streaming; others emit a single result.
        ///
        ///  # Parameters
        ///
        ///  - `model`: A handle to the loaded model.
        ///
        ///  # Returns
        ///
        ///  - `1` if the model supports token streaming
        ///  - `0` if it does not, or if the handle is null/invalid
        ///
        ///  # Example (C)
        ///
        ///  ```c
        ///  if (xybrid_model_supports_token_streaming(model)) {
        ///      // Use streaming inference
        ///  } else {
        ///      // Use batch inference
        ///  }
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "xybrid_model_supports_token_streaming", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int xybrid_model_supports_token_streaming(XybridModelHandle* model);

        /// <summary>
        ///  Run streaming inference on a model with the given input envelope.
        ///
        ///  This function blocks until inference is complete. For each token generated,
        ///  the callback is invoked with the token data. After all tokens are emitted,
        ///  the function returns a result handle with the final output.
        ///
        ///  For non-LLM models, a single callback invocation occurs with the complete result.
        ///
        ///  # Parameters
        ///
        ///  - `model`: A handle to the loaded model.
        ///  - `envelope`: A handle to the input envelope.
        ///  - `callback`: Function pointer invoked for each generated token.
        ///  - `user_data`: Opaque pointer passed through to every callback invocation.
        ///
        ///  # Returns
        ///
        ///  A handle to the final result, or null on failure.
        ///  On failure, call `xybrid_last_error()` to get the error message.
        ///
        ///  # Thread Safety
        ///
        ///  The callback is invoked from the calling thread. The caller must ensure
        ///  that `user_data` is valid for the duration of the call.
        ///
        ///  # Example (C)
        ///
        ///  ```c
        ///  void on_token(const char* token, int64_t token_id, uint32_t index,
        ///                const char* cumulative, const char* finish, void* ctx) {
        ///      printf("%s", token);
        ///      fflush(stdout);
        ///  }
        ///
        ///  XybridResultHandle* result = xybrid_model_run_streaming(
        ///      model, envelope, on_token, NULL);
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "xybrid_model_run_streaming", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern XybridResultHandle* xybrid_model_run_streaming(XybridModelHandle* model, XybridEnvelopeHandle* envelope, xybrid_model_run_streaming_callback_delegate callback, void* user_data);

        /// <summary>
        ///  Run streaming inference on a model with conversation context.
        ///
        ///  Same as `xybrid_model_run_streaming` but includes conversation history
        ///  for multi-turn LLM interactions.
        ///
        ///  # Parameters
        ///
        ///  - `model`: A handle to the loaded model.
        ///  - `envelope`: A handle to the input envelope (current user message).
        ///  - `context`: A handle to the conversation context.
        ///  - `callback`: Function pointer invoked for each generated token.
        ///  - `user_data`: Opaque pointer passed through to every callback invocation.
        ///
        ///  # Returns
        ///
        ///  A handle to the final result, or null on failure.
        ///  The envelope and context are NOT consumed - they can be reused.
        ///
        ///  # Example (C)
        ///
        ///  ```c
        ///  XybridContextHandle* ctx = xybrid_context_new();
        ///  xybrid_context_set_system(ctx, "You are a helpful assistant.");
        ///
        ///  XybridEnvelopeHandle* msg = xybrid_envelope_text_with_role("Hello!", XYBRID_ROLE_USER);
        ///  xybrid_context_push(ctx, msg);
        ///
        ///  XybridResultHandle* result = xybrid_model_run_streaming_with_context(
        ///      model, msg, ctx, on_token, NULL);
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "xybrid_model_run_streaming_with_context", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern XybridResultHandle* xybrid_model_run_streaming_with_context(XybridModelHandle* model, XybridEnvelopeHandle* envelope, XybridContextHandle* context, xybrid_model_run_streaming_with_context_callback_delegate callback, void* user_data);

        /// <summary>
        ///  Free a model handle.
        ///
        ///  This function frees the memory associated with a model handle.
        ///  After calling this function, the handle is no longer valid.
        ///
        ///  # Parameters
        ///
        ///  - `handle`: A handle to the model to free. May be null (no-op).
        ///
        ///  # Example (C)
        ///
        ///  ```c
        ///  xybrid_model_free(model);
        ///  model = NULL; // Good practice: null out after freeing
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "xybrid_model_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void xybrid_model_free(XybridModelHandle* handle);

        /// <summary>
        ///  Check if the inference was successful.
        ///
        ///  Returns 1 if the inference succeeded, 0 if it failed.
        ///  If the handle is null or invalid, returns 0.
        ///
        ///  # Parameters
        ///
        ///  - `result`: A handle to the inference result.
        ///
        ///  # Returns
        ///
        ///  - `1` if success is true
        ///  - `0` if success is false, or if the handle is null/invalid
        ///
        ///  # Example (C)
        ///
        ///  ```c
        ///  if (xybrid_result_success(result)) {
        ///      const char* text = xybrid_result_text(result);
        ///      printf("Result: %s\n", text);
        ///  } else {
        ///      const char* error = xybrid_result_error(result);
        ///      printf("Error: %s\n", error ? error : "unknown");
        ///  }
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "xybrid_result_success", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int xybrid_result_success(XybridResultHandle* result);

        /// <summary>
        ///  Get the error message from a failed inference.
        ///
        ///  Returns a pointer to a null-terminated string containing the error message,
        ///  or null if there was no error. The returned pointer is valid for the
        ///  lifetime of the result handle - do NOT free it with xybrid_free_string().
        ///
        ///  # Parameters
        ///
        ///  - `result`: A handle to the inference result.
        ///
        ///  # Returns
        ///
        ///  A pointer to the error message string, or null if no error.
        ///  The pointer is valid until the result handle is freed.
        ///
        ///  # Example (C)
        ///
        ///  ```c
        ///  if (!xybrid_result_success(result)) {
        ///      const char* error = xybrid_result_error(result);
        ///      fprintf(stderr, "Inference failed: %s\n", error ? error : "unknown error");
        ///  }
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "xybrid_result_error", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* xybrid_result_error(XybridResultHandle* result);
